--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -360,6 +360,7 @@
 
     <string name="general_search_null_response_error">Ничего не найдено. Попробуйте изменить фильтры</string>
     <string name="change_filters">Изменить фильтры</string>
+    <string name="reset_filter">Сбросить</string>
     <string name="general_sex">Пол</string>
     <string name="general_girl">Женский</string>
     <string name="general_boy">Мужской</string>
