--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -278,6 +278,7 @@
     <string name="general_premium_access_error">To do this you need a VIP-status.</string>
     <string name="general_search_null_response_error">Not found. Try to change the filters.</string>
     <string name="change_filters">Change filters</string>
+    <string name="reset_filter">Reset</string>
     <string name="general_sex">Sex</string>
     <string name="general_girl">Female</string>
     <string name="general_boy">Male</string>
