Добавлены строки с датой окончания бана.

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -380,6 +380,8 @@
     <string name="edit_refresh_status">Обновить статус</string>
 
     <string name="ban_title">Поздравляем! Вы забанены</string>
+    <string name="ban_title_forever">Поздравляем! Вы забанены навсегда</string>
+    <string name="ban_title_until">Поздравляем! Вы забанены до %s</string>
     <string name="ban_complain">Пожаловаться на бан</string>
     <string name="general_ready">Готово</string>
     <string name="buying_store_ok">Покупка успешно завершена</string>
