--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -579,4 +579,5 @@
     <string name="open_market_error">Cannot open the app page</string>
     <string name="billing_item_already_owned">Your previous purchase is now processing, please wait.</string>
     <string name="dialog">Conversation</string>
+    <string name="reply">Reply</string>
 </resources>
