#33177: Тост при попытке выбрать более 100 человек в фидовом списке.

--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -753,4 +753,6 @@
     <string name="billing_item_already_owned">Ваша предыдущая покупка в обработке, пожалуйста подождите</string>
     <string name="dialog">Переписка</string>
     <string name="reply">Ответить</string>
+    <string name="maximum_number_of_users">Выбрано максимальное количестово пользователей</string>
+    />
 </resources>
