#33221: Обрабатывать ошибку, связанную с ограничением ввода данных в поля рост и вес

--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -573,6 +573,7 @@
     <string name="loading_photo_percent">Uploading photos %d%%</string>
     <string name="profile_update_error">Update data error</string>
     <string name="retry_cancel_editing">There was a network connection error while sending data to the server. Exit without saving, or try again?</string>
+    <string name="retry_cancel_editing_bad_value">You have entered incorrect data. Exit without saving, or try again?</string>
     <string name="user_does_not_exist">The user is not found.</string>
     <string name="feedback_subject_ban">Complaint on unfair ban</string>
     <string name="settings_led">LED notification</string>
