--- a/src/main/res/values-de/strings.xml
+++ b/src/main/res/values-de/strings.xml
@@ -350,6 +350,7 @@
     <string name="general_gift">Geschenk</string>
     <string name="user_actions_chat">Konversation</string>
     <string name="profile_edit_age_ranges">Alter muss von 16 bis 99 Jahre sein. Geben Sie bitte eine korrekte Zahl ein und versuchen Sie noch einmal.</string>
+    <string name="wrong_password_format">Ungültiges Passwort-Format</string>
     <string name="sign_in">Einloggen</string>
     <string name="create_account">Account erstellen</string>
     <string name="email">E-mail</string>
@@ -577,4 +578,5 @@
     <string name="open_market_error">Fehler bei der Öffnung der App</string>
     <string name="billing_item_already_owned">Ihr voriger Kauf ist in der Bearbeitung, bitte warten Sie</string>
     <string name="dialog">Dialog</string>
+    <string name="reply">Antworten</string>
 </resources>
