--- a/src/main/res/values-ro/strings.xml
+++ b/src/main/res/values-ro/strings.xml
@@ -358,6 +358,8 @@
         <item quantity="other">Primeste VIP pe %d zile</item>
         <item quantity="one">Primeste VIP pe %d zile</item>
     </plurals>
+    <plurals name="get_vip_for_invites_plurals">
+    </plurals>
     <string name="buy_status_and_watch_your_fans">Cumpara VIP - statut si afla, cine te-a adaugat in alese</string>
     <string name="add_bookmarks_to_be_connected">Adaugati prieteni noi in aceasta despartitura, si nu veti pierde cu ei legatura</string>
     <string name="nobody_chat_with_you_sympathies_will_help">Mimeni nu va scris nimic. Simpatiile va vor fi de folos in cautarea prietenilor</string>
