--- a/src/main/res/values-ru/strings.xml
+++ b/src/main/res/values-ru/strings.xml
@@ -177,6 +177,7 @@
     <string name="general_dating">Знакомства</string>
     <string name="general_likes">Я нравлюсь</string>
 
+    <string name="general_sympathies">Симпатии</string>
     <string name="general_sympathy">Симпатия</string>
     <string name="general_delight">Восхищение</string>
     <string name="general_mutual">Взаимно</string>
